# DWGVIEWER

./: .gitattributes  .gitignore  build.gradle  settings.gradle
.github/workflows/: android.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  libredwg_stub.cpp  native-lib.cpp
app/src/main/cpp/include/: dwg.h  dwg_api.h
app/src/main/java/com/antigravity/dwgviewer/: DwgNative.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
